@@ -2,7 +2,7 @@
 #ifndef PYMOL_EVAL
 #define _PyMOL_VERSION "1.2b0pre"
 #else
-#define _PyMOL_VERSION "1.1eval"
+#define _PyMOL_VERSION "1.2eval"
 #endif
 #endif
 
@@ -11,13 +11,13 @@
 #endif
 
 #ifndef _PyMOL_VERSION_double
-#define _PyMOL_VERSION_double 1.10
+#define _PyMOL_VERSION_double 1.20
 #endif
 
 /* for session file compatibility */
 
 #ifndef _PyMOL_VERSION_int 
-#define _PyMOL_VERSION_int 110
+#define _PyMOL_VERSION_int 120
 #endif
 
 
